# craps

./: .gitmodules  Cargo.toml  build.sh
craps-record/: Cargo.toml
craps-record/src/: lib.rs
craps-recorder/: Cargo.toml
craps-recorder/src/: lib.rs
craps-replayer/: Cargo.toml
craps-replayer/src/: lib.rs
test/: getrandom.c  poll.c
